# SandHook

./: .gitignore  build.gradle
annotation/: build.gradle
app/src/main/java/com/swift/sandhook/: MainActivity.java  MyApp.java
app/src/main/java/com/swift/sandhook/testHookers/: CtrHook.java
gradle/wrapper/: gradle-wrapper.properties
hookers/: build.gradle
hooklib/: build.gradle
hooklib/src/main/cpp/: CMakeLists.txt
hooklib/src/main/cpp/includes/: classlinker_offset_helper.h  elf_util.h
hooklib/src/main/cpp/utils/: classlinker_offset_helper.cpp  hide_api.cpp
nativehook/: build.gradle
nativehook/src/main/cpp/: CMakeLists.txt
xposedcompat/: build.gradle
